# prompt-armor

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  setup.py
prompt_armor/: __init__.py  audit.py  cli.py  detector.py  filter.py  guard.py  main.py
tests/: test_armor.py
